src/flutter_recorder.h

/////////////////////////
/// NATIVE AUDIO SINK
/////////////////////////
// Direct native-to-native streaming (bypasses Dart main thread)
// Callback type matches flutter_soloud's expected signature
typedef void (*NativeAudioSinkCallback)(const unsigned char* data,
                                        unsigned int dataLen, void* userData);
// Schedule event at specific frame
// action: 0=None, 1=StartRecording, 2=StopRecording, 3=StartPlayback, 4=StopPlayback
FFI_PLUGIN_EXPORT uint32_t flutter_recorder_scheduler_scheduleEvent(
    int action, int64_t targetFrame, const char* path);
// Cancel a scheduled event by ID
// Returns 1 if cancelled, 0 if not found
FFI_PLUGIN_EXPORT int flutter_recorder_scheduler_cancelEvent(uint32_t eventId);
// Cancel all pending events
FFI_PLUGIN_EXPORT void flutter_recorder_scheduler_cancelAll();
// Poll for fired event notification
// Returns 1 if notification available, 0 if queue empty
FFI_PLUGIN_EXPORT int flutter_recorder_scheduler_pollNotification(
    uint32_t* outEventId, int* outAction, int64_t* outFiredFrame, int32_t* outLatency);
// Check if there are pending notifications
FFI_PLUGIN_EXPORT int flutter_recorder_scheduler_hasNotifications();
// Get current global frame position
FFI_PLUGIN_EXPORT int64_t flutter_recorder_scheduler_getGlobalFrame();
// Get base loop length in frames
FFI_PLUGIN_EXPORT int64_t flutter_recorder_scheduler_getBaseLoopFrames();
// Get next loop boundary frame
FFI_PLUGIN_EXPORT int64_t flutter_recorder_scheduler_getNextLoopBoundary();
// Set latency compensation in frames (applied at recording start)
FFI_PLUGIN_EXPORT void flutter_recorder_scheduler_setLatencyCompensation(int64_t frames);
// Get latency compensation in frames
FFI_PLUGIN_EXPORT int64_t flutter_recorder_scheduler_getLatencyCompensation();
/////////////////////////
/// Native Ring Buffer
/// Latency compensation via continuous capture with pre-roll
/////////////////////////

// Create/configure the native ring buffer
// capacitySeconds: How many seconds of audio to keep (typically 5)
// sampleRate: Sample rate in Hz
// channels: Number of channels (1=mono, 2=stereo)
FFI_PLUGIN_EXPORT void flutter_recorder_createRingBuffer(
    size_t capacitySeconds, unsigned int sampleRate, unsigned int channels);
// Destroy/reset the native ring buffer
FFI_PLUGIN_EXPORT void flutter_recorder_destroyRingBuffer();
// Read pre-roll samples for latency compensation
// dest: Destination buffer (must be pre-allocated)
// frameCount: Number of frames to read
// rewindFrames: How many frames back in time to start reading
// Returns: Number of frames actually read
FFI_PLUGIN_EXPORT size_t flutter_recorder_readPreRoll(
    float* dest, size_t frameCount, size_t rewindFrames);
// Get current audio level in dB (RMS)
FFI_PLUGIN_EXPORT float flutter_recorder_getAudioLevelDb();
// Get total frames written to the ring buffer
FFI_PLUGIN_EXPORT size_t flutter_recorder_getRingBufferFramesWritten();
// Get available frames in the ring buffer
FFI_PLUGIN_EXPORT size_t flutter_recorder_getRingBufferAvailable();
// Reset the ring buffer (clear all data)
FFI_PLUGIN_EXPORT void flutter_recorder_resetRingBuffer();