lib/src/bindings/flutter_recorder_bindings_generated.dart


  late final _flutter_recorder_scheduler_scheduleEventPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint32 Function(ffi.Int, ffi.Int64, ffi.Pointer<ffi.Char>)>>(
      'flutter_recorder_scheduler_scheduleEvent');
  late final _flutter_recorder_scheduler_scheduleEvent =
      _flutter_recorder_scheduler_scheduleEventPtr
          .asFunction<int Function(int, int, ffi.Pointer<ffi.Char>)>();

  /// Cancel a scheduled event by ID
  /// Returns 1 if cancelled, 0 if not found
  int flutter_recorder_scheduler_cancelEvent(
    int eventId,
  ) {
    return _flutter_recorder_scheduler_cancelEvent(
      eventId,
    );
  }

  late final _flutter_recorder_scheduler_cancelEventPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Uint32)>>(
          'flutter_recorder_scheduler_cancelEvent');
  late final _flutter_recorder_scheduler_cancelEvent =
      _flutter_recorder_scheduler_cancelEventPtr
          .asFunction<int Function(int)>();

  /// Cancel all pending events
  void flutter_recorder_scheduler_cancelAll() {
    return _flutter_recorder_scheduler_cancelAll();
  }

  late final _flutter_recorder_scheduler_cancelAllPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_scheduler_cancelAll');
  late final _flutter_recorder_scheduler_cancelAll =
      _flutter_recorder_scheduler_cancelAllPtr.asFunction<void Function()>();

  /// Poll for fired event notification
  /// Returns 1 if notification available, 0 if queue empty
  int flutter_recorder_scheduler_pollNotification(
    ffi.Pointer<ffi.Uint32> outEventId,
    ffi.Pointer<ffi.Int> outAction,
    ffi.Pointer<ffi.Int64> outFiredFrame,
    ffi.Pointer<ffi.Int32> outLatency,
  ) {
    return _flutter_recorder_scheduler_pollNotification(
      outEventId,
      outAction,
      outFiredFrame,
      outLatency,
    );
  }

  late final _flutter_recorder_scheduler_pollNotificationPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<ffi.Uint32>, ffi.Pointer<ffi.Int>,
                  ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int32>)>>(
      'flutter_recorder_scheduler_pollNotification');
  late final _flutter_recorder_scheduler_pollNotification =
      _flutter_recorder_scheduler_pollNotificationPtr.asFunction<
          int Function(ffi.Pointer<ffi.Uint32>, ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int32>)>();

  /// Check if there are pending notifications
  int flutter_recorder_scheduler_hasNotifications() {
    return _flutter_recorder_scheduler_hasNotifications();
  }

  late final _flutter_recorder_scheduler_hasNotificationsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_scheduler_hasNotifications');
  late final _flutter_recorder_scheduler_hasNotifications =
      _flutter_recorder_scheduler_hasNotificationsPtr
          .asFunction<int Function()>();

  /// Get current global frame position
  int flutter_recorder_scheduler_getGlobalFrame() {
    return _flutter_recorder_scheduler_getGlobalFrame();
  }

  late final _flutter_recorder_scheduler_getGlobalFramePtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
          'flutter_recorder_scheduler_getGlobalFrame');
  late final _flutter_recorder_scheduler_getGlobalFrame =
      _flutter_recorder_scheduler_getGlobalFramePtr
          .asFunction<int Function()>();

  /// Get base loop length in frames
  int flutter_recorder_scheduler_getBaseLoopFrames() {
    return _flutter_recorder_scheduler_getBaseLoopFrames();
  }

  late final _flutter_recorder_scheduler_getBaseLoopFramesPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
          'flutter_recorder_scheduler_getBaseLoopFrames');
  late final _flutter_recorder_scheduler_getBaseLoopFrames =
      _flutter_recorder_scheduler_getBaseLoopFramesPtr
          .asFunction<int Function()>();

  /// Get next loop boundary frame
  int flutter_recorder_scheduler_getNextLoopBoundary() {
    return _flutter_recorder_scheduler_getNextLoopBoundary();
  }

  late final _flutter_recorder_scheduler_getNextLoopBoundaryPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
          'flutter_recorder_scheduler_getNextLoopBoundary');
  late final _flutter_recorder_scheduler_getNextLoopBoundary =
      _flutter_recorder_scheduler_getNextLoopBoundaryPtr
          .asFunction<int Function()>();

  /// Set latency compensation in frames (applied at recording start)
  void flutter_recorder_scheduler_setLatencyCompensation(int frames) {
    return _flutter_recorder_scheduler_setLatencyCompensation(frames);
  }

  late final _flutter_recorder_scheduler_setLatencyCompensationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'flutter_recorder_scheduler_setLatencyCompensation');
  late final _flutter_recorder_scheduler_setLatencyCompensation =
      _flutter_recorder_scheduler_setLatencyCompensationPtr
          .asFunction<void Function(int)>();

  /// Get latency compensation in frames
  int flutter_recorder_scheduler_getLatencyCompensation() {
    return _flutter_recorder_scheduler_getLatencyCompensation();
  }

  late final _flutter_recorder_scheduler_getLatencyCompensationPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
          'flutter_recorder_scheduler_getLatencyCompensation');
  late final _flutter_recorder_scheduler_getLatencyCompensation =
      _flutter_recorder_scheduler_getLatencyCompensationPtr
          .asFunction<int Function()>();

  /// Create/configure the native ring buffer
  /// capacitySeconds: How many seconds of audio to keep (typically 5)
  /// sampleRate: Sample rate in Hz
  /// channels: Number of channels (1=mono, 2=stereo)
  void flutter_recorder_createRingBuffer(
    int capacitySeconds,
    int sampleRate,
    int channels,
  ) {
    return _flutter_recorder_createRingBuffer(
      capacitySeconds,
      sampleRate,
      channels,
    );
  }

  late final _flutter_recorder_createRingBufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Size, ffi.UnsignedInt,
              ffi.UnsignedInt)>>('flutter_recorder_createRingBuffer');
  late final _flutter_recorder_createRingBuffer =
      _flutter_recorder_createRingBufferPtr
          .asFunction<void Function(int, int, int)>();

  /// Destroy/reset the native ring buffer
  void flutter_recorder_destroyRingBuffer() {
    return _flutter_recorder_destroyRingBuffer();
  }

  late final _flutter_recorder_destroyRingBufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_destroyRingBuffer');
  late final _flutter_recorder_destroyRingBuffer =
      _flutter_recorder_destroyRingBufferPtr.asFunction<void Function()>();

  /// Read pre-roll samples for latency compensation
  /// dest: Destination buffer (must be pre-allocated)
  /// frameCount: Number of frames to read
  /// rewindFrames: How many frames back in time to start reading
  /// Returns: Number of frames actually read
  int flutter_recorder_readPreRoll(
    ffi.Pointer<ffi.Float> dest,
    int frameCount,
    int rewindFrames,
  ) {
    return _flutter_recorder_readPreRoll(
      dest,
      frameCount,
      rewindFrames,
    );
  }

  late final _flutter_recorder_readPreRollPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<ffi.Float>, ffi.Size,
              ffi.Size)>>('flutter_recorder_readPreRoll');
  late final _flutter_recorder_readPreRoll = _flutter_recorder_readPreRollPtr
      .asFunction<int Function(ffi.Pointer<ffi.Float>, int, int)>();

  /// Get current audio level in dB (RMS)
  double flutter_recorder_getAudioLevelDb() {
    return _flutter_recorder_getAudioLevelDb();
  }

  late final _flutter_recorder_getAudioLevelDbPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
          'flutter_recorder_getAudioLevelDb');
  late final _flutter_recorder_getAudioLevelDb =
      _flutter_recorder_getAudioLevelDbPtr.asFunction<double Function()>();

  /// Get total frames written to the ring buffer
  int flutter_recorder_getRingBufferFramesWritten() {
    return _flutter_recorder_getRingBufferFramesWritten();
  }

  late final _flutter_recorder_getRingBufferFramesWrittenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
          'flutter_recorder_getRingBufferFramesWritten');
  late final _flutter_recorder_getRingBufferFramesWritten =
      _flutter_recorder_getRingBufferFramesWrittenPtr
          .asFunction<int Function()>();

  /// Get available frames in the ring buffer
  int flutter_recorder_getRingBufferAvailable() {
    return _flutter_recorder_getRingBufferAvailable();
  }

  late final _flutter_recorder_getRingBufferAvailablePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
          'flutter_recorder_getRingBufferAvailable');
  late final _flutter_recorder_getRingBufferAvailable =
      _flutter_recorder_getRingBufferAvailablePtr.asFunction<int Function()>();

  /// Reset the ring buffer (clear all data)
  void flutter_recorder_resetRingBuffer() {
    return _flutter_recorder_resetRingBuffer();
  }

  late final _flutter_recorder_resetRingBufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_resetRingBuffer');
  late final _flutter_recorder_resetRingBuffer =
      _flutter_recorder_resetRingBufferPtr.asFunction<void Function()>();
}

typedef dartSilenceChangedCallback_t
    = ffi.Pointer<ffi.NativeFunction<dartSilenceChangedCallback_tFunction>>;
typedef dartSilenceChangedCallback_tFunction = ffi.Void Function(
    ffi.Pointer<ffi.Bool>, ffi.Pointer<ffi.Float>);
typedef DartdartSilenceChangedCallback_tFunction = void Function(
    ffi.Pointer<ffi.Bool>, ffi.Pointer<ffi.Float>);
typedef dartStreamDataCallback_t
    = ffi.Pointer<ffi.NativeFunction<dartStreamDataCallback_tFunction>>;
typedef dartStreamDataCallback_tFunction = ffi.Void Function(
    ffi.Pointer<ffi.UnsignedChar> data, ffi.Int dataLength);
typedef DartdartStreamDataCallback_tFunction = void Function(
    ffi.Pointer<ffi.UnsignedChar> data, int dataLength);

/// Possible capture errors
enum CaptureErrors {
  /// No error
  captureNoError(0),

  /// The capture device has failed to initialize.
  captureInitFailed(1),

  /// The capture device has not yet been initialized.
  captureNotInited(2),

  /// Failed to start the device.
  failedToStartDevice(3),

  /// Failed to initialize wav recording.
  failedToInitializeRecording(4),

  /// Invalid arguments while initializing wav recording.
  invalidArgs(5),

  /// Failed to write wav file.
  failedToWriteWav(6),

  /// Filter not found
  filterNotFound(7),

  /// The filter has already been added.
  filterAlreadyAdded(8),

  /// Error getting filter parameter.
  filterParameterGetError(9);

  final int value;
  const CaptureErrors(this.value);

  static CaptureErrors fromValue(int value) => switch (value) {
        0 => captureNoError,
        1 => captureInitFailed,
        2 => captureNotInited,
        3 => failedToStartDevice,
        4 => failedToInitializeRecording,
        5 => invalidArgs,
        6 => failedToWriteWav,
        7 => filterNotFound,
        8 => filterAlreadyAdded,
        9 => filterParameterGetError,
        _ => throw ArgumentError("Unknown value for CaptureErrors: $value"),
      };
}

/// //////////////////////
/// NATIVE AUDIO SINK
/// //////////////////////
/// Direct native-to-native streaming (bypasses Dart main thread)
/// Callback type matches flutter_soloud's expected signature
typedef NativeAudioSinkCallback
    = ffi.Pointer<ffi.NativeFunction<NativeAudioSinkCallbackFunction>>;
typedef NativeAudioSinkCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.UnsignedChar> data,
    ffi.UnsignedInt dataLen,
    ffi.Pointer<ffi.Void> userData);
typedef DartNativeAudioSinkCallbackFunction = void Function(
    ffi.Pointer<ffi.UnsignedChar> data,
    int dataLen,
    ffi.Pointer<ffi.Void> userData);
